force-app/main/default/objects/Daily_Store_Operations__c/Daily_Store_Operations__c.object-meta.xml
<CustomObject>
    <label>Daily Store Operations</label>
    <nameField>
        <displayFormat>DSO-{00000}</displayFormat>
        <label>Daily Store Operations  Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Store Operations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>