force-app/main/default/objects/Daily_Store_Operations__c/fields/Any__c.field-meta.xml
<CustomField>
    <fullName>Any__c</fullName>
    <label>Any Discrepancies?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>