force-app/main/default/objects/Daily_Store_Operations__c/fields/Cash_Deposited__c.field-meta.xml
<CustomField>
    <fullName>Cash_Deposited__c</fullName>
    <label>Cash Deposited</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>