force-app/main/default/objects/Daily_Store_Operations__c/fields/Cleanliness_Level__c.field-meta.xml
<CustomField>
    <fullName>Cleanliness_Level__c</fullName>
    <label>Cleanliness Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>