force-app/main/default/objects/Daily_Store_Operations__c/fields/Customer_Service_Comments__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Comments__c</fullName>
    <label>Customer Service Comments</label>
    <type>TextArea</type>
</CustomField>