force-app/main/default/objects/Daily_Store_Operations__c/fields/Employee_Comments__c.field-meta.xml
<CustomField>
    <fullName>Employee_Comments__c</fullName>
    <label>Employee Comments</label>
    <type>TextArea</type>
</CustomField>