force-app/main/default/objects/Daily_Store_Operations__c/fields/Housekeeping_Comments__c.field-meta.xml
<CustomField>
    <fullName>Housekeeping_Comments__c</fullName>
    <label>Housekeeping Comments</label>
    <type>TextArea</type>
</CustomField>