force-app/main/default/objects/Daily_Store_Operations__c/fields/Inventory_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Adjustments__c</fullName>
    <label>Inventory Adjustments</label>
    <type>TextArea</type>
</CustomField>