force-app/main/default/objects/Daily_Store_Operations__c/fields/Number_of_Customer_Complaints__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Customer_Complaints__c</fullName>
    <label>Number of Customer Complaints</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>