force-app/main/default/objects/Daily_Store_Operations__c/fields/Overall_Customer_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Overall_Customer_Satisfaction__c</fullName>
    <label>Overall Customer Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>