force-app/main/default/objects/Daily_Store_Operations__c/fields/Sales_Cash_Comments__c.field-meta.xml
<CustomField>
    <fullName>Sales_Cash_Comments__c</fullName>
    <label>Sales/Cash Comments</label>
    <type>TextArea</type>
</CustomField>