force-app/main/default/objects/Daily_Store_Operations__c/fields/Staff_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Staff_Attendance__c</fullName>
    <label>Staff Attendance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>