force-app/main/default/objects/Daily_Store_Operations__c/fields/Stock_Level__c.field-meta.xml
<CustomField>
    <fullName>Stock_Level__c</fullName>
    <label>Stock Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Sufficient</fullName>
            </value>
            <value>
                <fullName>Excess</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>