force-app/main/default/objects/Daily_Store_Operations__c/fields/Store_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Store_Close_Date__c</fullName>
    <label>Store Close Date</label>
    <type>Date</type>
</CustomField>