force-app/main/default/objects/Daily_Store_Operations__c/fields/Store_Close_Time__c.field-meta.xml
<CustomField>
    <fullName>Store_Close_Time__c</fullName>
    <label>Store Close Time</label>
    <type>Time</type>
</CustomField>