force-app/main/default/objects/Daily_Store_Operations__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Store_Open_Date__c</columns>
    <columns>Store_Close_Date__c</columns>
    <columns>Stock_Level__c</columns>
    <columns>Total_Sales__c</columns>
    <columns>Overall_Customer_Satisfaction__c</columns>
    <columns>Cleanliness_Level__c</columns>
    <columns>Staff_Attendance__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>