force-app/main/default/objects/Daily_Store_Operations__c/listViews/Excess_Stock.listView-meta.xml
<ListView>
    <fullName>Excess_Stock</fullName>
    <columns>NAME</columns>
    <columns>Stock_Level__c</columns>
    <columns>Any_Shortages__c</columns>
    <columns>Inventory_Adjustments__c</columns>
    <columns>Inventory_Comments__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Stock_Level__c</field>
        <operation>equals</operation>
        <value>Excess</value>
    </filters>
    <label>Excess Stock</label>
</ListView>