force-app/main/default/objects/Daily_Store_Operations__c/listViews/Poor_Customer_Satisfaction.listView-meta.xml
<ListView>
    <fullName>Poor_Customer_Satisfaction</fullName>
    <columns>NAME</columns>
    <columns>Overall_Customer_Satisfaction__c</columns>
    <columns>Number_of_Customer_Complaints__c</columns>
    <columns>Number_of_Customer_Returns__c</columns>
    <columns>Customer_Service_Comments__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Overall_Customer_Satisfaction__c</field>
        <operation>equals</operation>
        <value>Poor</value>
    </filters>
    <label>Poor Customer Satisfaction</label>
</ListView>